update handler description
